[project]
name = "ecan-bridge"
version = "0.1.0"
authors = [
  { name="Philippe Marchesseault", email="pmarches@gmail.com" },
]
description = "Tools for ECAN-E01 CANBus to ethernet gateway"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL3 License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pmarches/ecan-bridge"
Issues = "https://github.com/pmarches/ecan-bridge/issues"
