[project]
name = "ebyteecan"
version = "0.2.0"
authors = [
  { name="Philippe Marchesseault", email="pmarches@gmail.com" },
]
description = "Tools for EBytes's ECAN-E01 CANBus to ethernet gateway"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL3 License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pmarches/ecan-bridge"
Issues = "https://github.com/pmarches/ecan-bridge/issues"
